apps/keycloak/target/classes/META-INF/fabric8/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Secret
  metadata:
    labels:
      app: keycloak
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: io.clarksnut.platform.apps
    name: keycloak
  data:
    kc.user: YWRtaW4K
    kc.password: YWRtaW4K
    kc.clientid.secret: Yjc4NzNmODAtNmFkNy00NGE1LTk3Y2ItYmQyMTA3ODllYjQx
    kc.private.key: TUlJQ1dnSUJBQUtCZ0VqbFpOMVE3d2c1UU9IelhHcXlOZi9xL1ZIUTBvSjJOZGVPRHMxOHh1WkpHSkxEZVA4ZU5QY2trbGdWb1RJaFZzOTlaNXRMTTFoUCs5R213ODI1dVVXRnZsNHg1MGoyYW0yNUFIOGlpUGhreUw2aEx6dThzYnd3clU5R1RpcllqRVM5RlNRVWF6TmlWMVhYSGR5TGRvRm03dzMzZDVobFdpT1M4NmNmRnNGN0FnTUJBQUVDZ1lBUE5NTDRvOVJwQzhCc0lkN3FadWg2elNNd3VQWGd2eFgyTkMwRVVuNFBOYnBKaXpzblJMN1p1eWhIOWFNZG1QVEo3YWY2TGhLMDNtSnlWbTVMOE8wanlYQ2JzaWdkTVUxSDF4UmZiZ1JOUTViRHpHZUJzYTlFSHlpa2dDbkVTNXRZcFVKQnRzNjdKOVNYTU56VTFDckliM2JPQUhsaXp2aWozaE9K [...]
    kc.public.key: TUlHZU1BMEdDU3FHU0liM0RRRUJBUVVBQTRHTUFEQ0JpQUtCZ0VqbFpOMVE3d2c1UU9IelhHcXlOZi9xL1ZIUTBvSjJOZGVPRHMxOHh1WkpHSkxEZVA4ZU5QY2trbGdWb1RJaFZzOTlaNXRMTTFoUCs5R213ODI1dVVXRnZsNHg1MGoyYW0yNUFIOGlpUGhreUw2aEx6dThzYnd3clU5R1RpcllqRVM5RlNRVWF6TmlWMVhYSGR5TGRvRm03dzMzZDVobFdpT1M4NmNmRnNGN0FnTUJBQUU9
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      service.alpha.openshift.io/dependencies: '[{"name":"keycloak-db","namespace":"","kind":"Service"}]'
      fabric8.io/git-commit: 40eae4ef1109d880c1e5b885a5bfddd6c784cbea
      fabric8.io/git-branch: master
      fabric8.io/scm-con-url: scm:git:git@github.com:wolsnut4/easydebt-platform.git/apps/keycloak
      fabric8.io/scm-devcon-url: scm:git:git@github.com:wolsnut4/easydebt-platform.git/apps/keycloak
      fabric8.io/scm-tag: app-console-2.0.1
      fabric8.io/scm-url: http://github.com/wolsnut4/easydebt-platform/apps/keycloak
    labels:
      expose: "true"
      app: keycloak
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: io.clarksnut.platform.apps
    name: keycloak
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: keycloak
      provider: fabric8
      group: io.clarksnut.platform.apps
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/target-platform: openshift
      service.alpha.openshift.io/dependencies: '[{"name":"keycloak-db","namespace":"","kind":"Service"}]'
      fabric8.io/git-commit: 40eae4ef1109d880c1e5b885a5bfddd6c784cbea
      fabric8.io/git-branch: master
      fabric8.io/scm-con-url: scm:git:git@github.com:wolsnut4/easydebt-platform.git/apps/keycloak
      fabric8.io/scm-devcon-url: scm:git:git@github.com:wolsnut4/easydebt-platform.git/apps/keycloak
      fabric8.io/scm-tag: app-console-2.0.1
      fabric8.io/scm-url: http://github.com/wolsnut4/easydebt-platform/apps/keycloak
    labels:
      expose: "true"
      app: keycloak
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: io.clarksnut.platform.apps
    name: sso
  spec:
    ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: keycloak
      provider: fabric8
      group: io.clarksnut.platform.apps
- apiVersion: v1
  kind: ConfigMap
  metadata:
    annotations:
      expose.config.fabric8.io/apiserver-url-key: apiserver.url
      expose.service-key.config.fabric8.io/clarksnutui: clarksnutui.url
      expose.service-key.config.fabric8.io/keycloak: keycloak.url
      expose.service-key.config.fabric8.io/jenkins: jenkins.url
      expose-full.service-key.config.fabric8.io/clarksnut: clarksnut.api.url
      expose-no-path.service-key.config.fabric8.io/auth: auth.url
    labels:
      app: keycloak
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: io.clarksnut.platform.apps
    name: keycloak
  data:
    db.url: keycloak-db
    db.port: "5432"
    apiserver.url: http://kubernetes
    clarksnutui.url: http://clarksnutui
    jenkins.url: http://jenkins
    keycloak.url: http://keycloak
    auth.api.url: http://auth
    clarksnut.api.url: http://clarksnut
    clarksnut-realm.json: |-
      [...]
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      configmap.fabric8.io/update-on-change: keycloak
      fabric8.io/target-platform: openshift
    labels:
      app: keycloak
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: io.clarksnut.platform.apps
    name: keycloak
  spec:
    replicas: 1
    strategy:
      rollingParams:
        timeoutSeconds: 7200
      type: Rolling
    template:
      metadata:
        annotations:
          pod.beta.kubernetes.io/init-containers: |-
            [{
              "name": "git-cloner",
              "image": "fabric8/builder-clients:0.11",
              "imagePullPolicy": "IfNotPresent",
              "command": [ "/bin/bash" ],
              "args": [
                "-c",
                "rm -rf /keycloak-theme/login && git clone https://github.com/clarksnut/clarksnut-keycloak-theme.git /keycloak-theme/login && cd /keycloak-theme/login"
              ],
              "volumeMounts": [{
                "name": "keycloak-theme",
                "mountPath": "/keycloak-theme"
              }]
            },
            {
              "name": "openshift-ca-pemtokeystore",
              "image": "jimmidyson/pemtokeystore:v0.2.0",
              "imagePullPolicy": "IfNotPresent",
              "args": [
                "-keystore", "/tls-keystore/openshift-truststore.jks",
                "-ca-file", "/var/run/secrets/kubernetes.io/serviceaccount/ca.crt",
                "-ca-file", "/var/run/secrets/kubernetes.io/serviceaccount/service-ca.crt",
                "-ca-dir", "/usr/share/ca-certificates/mozilla"
              ],
              "volumeMounts": [{
                "name": "keycloak-tls",
                "mountPath": "/tls-keystore"
              }]
            },
            {
              "name": "envvar-substitution",
              "image": "fabric8/envsubst-file:1.0.0",
              "imagePullPolicy": "IfNotPresent",
              "args": [
                "clarksnut-realm.json"
              ],
              "env": [{
                "name": "AUTH_URL",
                "valueFrom": {
                        "configMapKeyRef": {
                            "name": "keycloak",
                            "key": "auth.api.url"
                        }
                    }
              },
              {
                "name": "CLARKSNUT_URL",
                "valueFrom": {
                        "configMapKeyRef": {
                            "name": "keycloak",
                            "key": "clarksnut.api.url"
                        }
                    }
              },
              {
                "name": "KEYCLOAK_URL",
                "valueFrom": {
                        "configMapKeyRef": {
                            "name": "keycloak",
                            "key": "keycloak.url"
                        }
                    }
              },
              {
                "name": "CLARKSNUTUI_URL",
                "valueFrom": {
                        "configMapKeyRef": {
                            "name": "keycloak",
                            "key": "clarksnutui.url"
                        }
                    }
              },
              {
                "name": "KEYCLOAK_PRIVATEKEY",
                "valueFrom": {
                        "secretKeyRef": {
                            "name": "keycloak",
                            "key": "kc.private.key"
                        }
                    }
              },
              {
                "name": "KEYCLOAK_PUBLICKEY",
                "valueFrom": {
                        "secretKeyRef": {
                            "name": "keycloak",
                            "key": "kc.public.key"
                        }
                    }
              },
              {
                "name": "KEYCLOAK_CLIENTID_SECRET",
                "valueFrom": {
                        "secretKeyRef": {
                            "name": "keycloak",
                            "key": "kc.clientid.secret"
                        }
                    }
              },
              {
                "name": "K8S_API_SERVER",
                "valueFrom": {
                        "configMapKeyRef": {
                            "name": "keycloak",
                            "key": "apiserver.url"
                        }
                    }
              },
              {
                "name": "HIDE_OPENSHIFT_BTN",
                "value": "false"
              },
              {
                "name": "HIDE_GITHUB_BTN",
                "value": "true"
              }],
              "volumeMounts": [
              {
                "name": "keycloak-config",
                "mountPath": "/workdir/clarksnut-realm.json",
                "subPath": "config/clarksnut-realm.json"
              },
              {
                "name": "keycloak-subst-config",
                "mountPath": "/processed"
              }
              ]
            },
            {
                "name": "init-dependencyservice",
                "image": "fabric8/fabric8-dependency-wait-service:v6632df1",
                "imagePullPolicy": "IfNotPresent",
                "command": ["sh", "-c", "fabric8-dependency-wait-service-linux-amd64 postgres://keycloak@keycloak-db:5432"],
                "env": [{
                  "name": "DEPENDENCY_POLL_INTERVAL",
                  "value": "1"
                }, {
                  "name": "DEPENDENCY_LOG_VERBOSE",
                  "value": "true"
                }]
            }]
        labels:
          app: keycloak
          provider: fabric8
          version: 1.0-SNAPSHOT
          group: io.clarksnut.platform.apps
      spec:
        containers:
        - args:
          - -b $(INTERNAL_POD_IP)
          - -Djgroups.bind_addr=global
          - -Djboss.node.name=$(INTERNAL_POD_IP)
          - -Djavax.net.ssl.trustStore=/opt/jboss/keycloak/standalone/configuration/tls/openshift-truststore.jks
          - -Dkeycloak.migration.action=import
          - -Dkeycloak.migration.provider=singleFile
          - -Dkeycloak.migration.file=/opt/jboss/keycloak/standalone/configuration/import/clarksnut-realm.json
          - -Dkeycloak.migration.strategy=IGNORE_EXISTING
          image: fabric8/keycloak-postgres:v15751c8
          livenessProbe:
            httpGet:
              path: /auth
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 10
          name: keycloak
          readinessProbe:
            httpGet:
              path: /auth
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 10
          volumeMounts:
          - mountPath: /opt/jboss/keycloak/standalone/configuration/tls
            name: keycloak-tls
          - mountPath: /opt/jboss/keycloak/standalone/configuration/import
            name: keycloak-subst-config
          - mountPath: /opt/jboss/keycloak/themes/clarksnut
            name: keycloak-theme
        volumes:
        - emptyDir: {}
          name: keycloak-tls
        - emptyDir: {}
          name: keycloak-subst-config
        - configMap:
            items:
            - key: clarksnut-realm.json
              path: config/clarksnut-realm.json
            name: keycloak
          name: keycloak-config
        - emptyDir: {}
          name: keycloak-theme
- apiVersion: v1
  kind: Route
  metadata:
    labels:
      app: keycloak
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: io.clarksnut.platform.apps
    name: keycloak
  spec:
    to:
      kind: Service
      name: keycloak
- apiVersion: v1
  kind: Route
  metadata:
    annotations:
      fabric8.io/target-platform: openshift
      service.alpha.openshift.io/dependencies: '[{"name":"keycloak-db","namespace":"","kind":"Service"}]'
    labels:
      expose: "true"
      app: keycloak
      provider: fabric8
      version: 1.0-SNAPSHOT
      group: io.clarksnut.platform.apps
    name: sso
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: sso
